--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -1,13 +1,17 @@
 name: Commit cheat
 
 on:
-
   push:
     branches:
       - main
-      
   schedule:
-  - cron: "0 1/4 * * *"
+    - cron: "0 0 * * *"     # 00:00
+    - cron: "25 3 * * *"    # 03:25
+    - cron: "50 6 * * *"    # 06:50
+    - cron: "15 10 * * *"   # 10:15
+    - cron: "40 13 * * *"   # 13:40
+    - cron: "5 17 * * *"    # 17:05
+    - cron: "30 20 * * *"   # 20:30
 
 jobs:
   auto_commit:
@@ -15,16 +19,16 @@ jobs:
     steps:
       - name: Set global directory
         run: git config --global --add safe.directory /github/workspace
+
       - uses: actions/checkout@v3     
         with:
-         persist-credentials: false
-         fetch-depth: 1
+          persist-credentials: false
+          fetch-depth: 1
 
       - name: Modify last update
         run: |
-          cat > update.txt
-          d=`date '+%Y-%m-%dT%H:%M:%SZ'`
-          echo $d > update.txt
+          d=$(date '+%Y-%m-%dT%H:%M:%SZ')
+          echo "$d" > update.txt
           
       - name: Commit changes
         run: |
